# CodeStyleChecker

./: .gitignore  .gitlab-ci.yml  Dockerfile  main.py  pyproject.toml  requirements.txt  test-bash.sh  test.Dockerfile  test.py  test.sh
.github/workflows/: test-prod.yml
service/: java.py  python.py  utils.py
setting/: google.xml  pylintrc
