[tool.poetry]
name = "codestylechecker"
version = "0.1.0"
description = ""
authors = ["vincentinttsh <vincentinttsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
